fix overflow

--- a/stylus/base/typography.styl
+++ b/stylus/base/typography.styl
@@ -42,3 +42,8 @@ td
   display table-cell
   vertical-align bottom
   padding 0.4rem
+
+pre
+  overflow-x auto
+  background-color rgba(0, 0, 0, 0.1)
+  padding 0.8rem
